--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <form id="searchForm" class="header-searchForm">
             <input type="text" placeholder="Vengadores" />
-            <button>🔍</button>
+            <button id="searchBtn">🔍</button>
         </form>
     </header>
 
@@ -115,7 +115,7 @@
         </article>
     </section>
 
-    <footer>Hecho con amor en Platzi por @juandc</footer>
+    <footer>Hecho con amor en Platzi por @juandc - @Ardons</footer>
 
 
 
@@ -125,7 +125,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secret.js"></script>
+    <script src="./src/nodes.js"></script>
     <script src="./src/main.js"></script>
+    <script src="./src/navigation.js"></script>
+    
 </body>
 
 </html>
